--- a/index.html
+++ b/index.html
@@ -553,7 +553,6 @@ body {
             <button onclick="window.location.href='https://t.me/hasan99bot?start=2c3c1350fa7dd68e8dda353ddb8e1133';">السادس الابتدائي </button>
         </div>
    
-
        
     <div class="section" id="d1">
         <div>
@@ -605,17 +604,9 @@ body {
 <h2>ملازم السادس الإعدادي 2025</h2>
 تستعد العديد من الطلاب في العراق لمواجهة تحديات الصف السادس العلمي، والتي تتطلب إعدادًا جيدًا ومصادر موثوقة. ولمساعدتكم في هذا الصدد، نقدم لكم صفحة تحميل ملازم الصف السادس العلمي للعام الدراسي 2025. تتوفر في هذه الصفحة ملازم لجميع المواد المقررة، بما في ذلك الاسلامية، القواعد، الأدب، الرياضيات، الفيزياء، الكيمياء، الأحياء، اللغة الإنجليزية، اللغة العربية، واللغة الفرنسية.
  <!-- الأزرار الإضافية -->
- <a href="https://t.me/d_tt123bot?start=4e9a1ee436415e035dda990a0b039963" class="custom-button" target="_blank">ملازم اللغة العربية  2025</a>
- <a href="https://t.me/d_tt123bot?start=eed6022419bf38db21fc4cc4ffe6cba2" class="custom-button" target="_blank">ملازم الإسلامية   2025</a>
- <a href="https://t.me/d_tt123bot?start=c9713621d06f81fcf5552c5cbb4413a7" class="custom-button" target="_blank">ملازم الكيمياء   2025</a>
- <a href="https://t.me/d_tt123bot?start=11dbcc75f900e4ab5079be0a5e95fb7a" class="custom-button" target="_blank">ملازم الفيزياء   2025</a>
- <a href="https://t.me/d_tt123bot?start=11dbcc75f900e4ab5079be0a5e95fb7a" class="custom-button" target="_blank">ملازم الفيزياء   2025</a>
- <a href="https://t.me/d_tt123bot?start=eea4b408a8a47f3a07fd07b24c2e43d1" class="custom-button" target="_blank">ملازم الرياضيات   2025</a>
-</div>
 
- 
  <!-- الرابط مع الزر -->
- <a href="https://t.me/d_tt123bot" class="custom-button" target="_blank">     المزيد من الملازم 2025 </a>
+ <a href="file:///F:/%D8%A7%D8%A8%D9%86%20%D8%A7%D9%84%D8%A8%D8%B5%D8%B1%D8%A9%20%20%D8%B7%D9%84%D8%A7%D8%A8%20%D8%A7%D9%84%D8%B9%D8%B1%D8%A7%D9%82/hasan.html" class="custom-button" target="_blank">       الملازم 2025 </a>
 <!-- زر البحث الثابت -->
 <a href="https://t.me/d_tt123bot?start=search" class="custom-button" target="_blank">    البحث داخل البوت</a>
 </div></br>
@@ -644,44 +635,6 @@ body {
     </div>
 
   
-    <div class="books-container">
-        <!-- كتاب 1 -->
-        <div class="book-item">
-            <img src="img/4.jpg" alt="حيدر وليد - رياضيات">
-            <h3>حيدر وليد  </h3>
-            <button class="borrow-button" onclick="window.location.href='https://t.me/d_tt02/9'">تحميل </button>
-        </div>
-        <!-- كتاب 2 -->
-        <div class="book-item">
-            <img src="img/5.jpg" alt="علاء السعداوي - كيمياء">
-            <h3>علاء السعداوي  </h3>
-            <button class="borrow-button" onclick="window.location.href='https://t.me/d_tt02/28'">تحميل </button>
-        </div>
-        <!-- كتاب 3 -->
-        <div class="book-item">
-            <img src="img/6.jpg" alt="مؤيد سليم - فيزياء">
-            <h3>مؤيد سليم </h3>
-            <button class="borrow-button" onclick="window.location.href='https://t.me/d_tt02/23'">تحميل </button>
-        </div>
-     <!-- كتاب 4 -->
-     <div class="book-item">
-        <img src="img/8.jpg" alt=" نورس الموسوي ">
-        <h3> نورس الموسوي  </h3>
-        <button class="borrow-button" onclick="window.location.href='https://t.me/d_tt02/22'">تحميل </button>
-    </div>
-    <!-- كتاب 5 -->
-    <div class="book-item">
-        <img src="img/9.jpg" alt=" عقيل الزبيدي ">
-        <h3> عقيل الزبيدي </h3>
-        <button class="borrow-button" onclick="window.location.href='https://t.me/d_tt02/18'">تحميل </button>
-    </div>
-    <!-- كتاب 6 -->
-    <div class="book-item">
-        <img src="img/10.jpg" alt="عمار فاضل">
-        <h3> عمار فاضل</h3>
-        <button class="borrow-button" onclick="window.location.href='https://t.me/d_tt02/12'">تحميل </button>
-    </div>
-    
     <footer>
         <p>&copy; 2025 جميع الحقوق محفوظة</p>
         <div class="social-icons">
