--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ body {
  <!-- الأزرار الإضافية -->
 
  <!-- الرابط مع الزر -->
- <a href="file:///F:/%D8%A7%D8%A8%D9%86%20%D8%A7%D9%84%D8%A8%D8%B5%D8%B1%D8%A9%20%20%D8%B7%D9%84%D8%A7%D8%A8%20%D8%A7%D9%84%D8%B9%D8%B1%D8%A7%D9%82/hasan.html" class="custom-button" target="_blank">       الملازم 2025 </a>
+ <a href="file:///https://github.com/lraq2/-_-/blob/main/hasan.html">       الملازم 2025 </a>
 <!-- زر البحث الثابت -->
 <a href="https://t.me/d_tt123bot?start=search" class="custom-button" target="_blank">    البحث داخل البوت</a>
 </div></br>
