--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ body {
  <!-- الأزرار الإضافية -->
 
  <!-- الرابط مع الزر -->
- <a href="hasan.html">       الملازم 2025 </a>
+ <a href="hasan.html" class="custom-button" target="_blank">       الملازم 2025 </a>
 <!-- زر البحث الثابت -->
 <a href="https://t.me/d_tt123bot?start=search" class="custom-button" target="_blank">    البحث داخل البوت</a>
 </div></br>
