--- a/index.html
+++ b/index.html
@@ -613,20 +613,9 @@ body {
 
 
 
-    <h1>  مرشحات الثالث متوسط فيزياء</h1>
-    <button onclick="window.location.href='https://t.me/hasan99bot?start=6f4af090fb030b0d2eb29e99696ea838';">اضغط هنا</button>
-    <h1> مرشحات الثالث متوسط كيمياء</h1>
-    <button onclick="window.location.href='https://t.me/hasan99bot?start=bd26cb587979736d9f0b945b45597c4e';">اضغط هنا</button>
-    <h1> مرشحات الثالث متوسط الادب </h1>
-    <button onclick="window.location.href='https://t.me/hasan99bot?start=a79533afed19a9ef1eacb576b6a325ea';">اضغط هنا</button>
-    <h1> مرشحات الثالث متوسط الاملاء</h1>
-    <button onclick="window.location.href='https://t.me/hasan99bot?start=2241c70bfe953665f8dc781e6a98f0c0';">اضغط هنا</button>
-    <h1> مرشحات الثالث متوسط احياء</h1>
-    <button onclick="window.location.href='https://t.me/hasan99bot?start=8011fab240466c9547faa6988481d26d';">اضغط هنا</button>
-    <h1> مرشحات الثالث متوسط الاجتماعيات</h1>
-    <button onclick="window.location.href='https://t.me/hasan99bot?start=03eb76b6985659fdb6f50291331b261f';">اضغط هنا</button>
-<body>
-<br></br>  
+    <h1>   مرشحات الثالث المتوسط </h1>
+    <button onclick="window.location.href='hasan1.html';">اضغط هنا</button>
+ 
     <!-- البحث في جوجل -->
     <h1>ابن البصرة | طلاب العراق  للبحث  في Google   </h1>
     <form action="https://www.google.com/search" method="get" target="_blank">
